# kolega-code

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SCAN_HANG_TIMEOUTS.md  SECURITY.md  conftest.py  pyproject.toml  run_tests.sh
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  docs.yml  release.yml
benchmarks/: __init__.py
benchmarks/edit_tools/: README.md  __init__.py  __main__.py  artifacts.py  authoring.py  browser.py  corpus.py  models.py  protocols.py  recipes.py  report.py  runner.py  scoring.py  usage.py  workspace.py
docs/: README.md  astro.config.mjs  package-lock.json  package.json
kolega_code/: __init__.py  config.py  events.py  local_state.py  permissions.py  runtime.py  scratchpad.py
kolega_code/_bundled_skills/: manifest.json
kolega_code/agent/: __init__.py  baseagent.py  browseragent.py  coder.py  common.py  compression.py  config.py  connection_manager.py  context.py  conversation.py  custom_agents.py  edit_protocols.py  errors.py  events.py  generalagent.py  goal.py  investigationagent.py  model_routing.py  planningagent.py  prompt_dump.py  prompt_overrides.py  prompt_provider.py  prompts.py  tools.py
kolega_code/auth/: __init__.py  _jwt.py  chatgpt_oauth.py  constants.py  tokens.py
kolega_code/cli/: __init__.py  app.py  clipboard_image.py  config.py  connection.py  diagnostics.py  file_index.py  goal.py  main.py  mentions.py  messages.py  model_connection.py  plan_artifacts.py  provider_registry.py  session_journal.py  session_store.py  settings.py  skills.py  slash_commands.py  theme.py  updater.py
kolega_code/config/: sandbox_config.py
kolega_code/hooks/: __init__.py  backends.py  config.py  dispatcher.py  events.py  matcher.py  outcome.py
kolega_code/llm/: client.py  exceptions.py  instrumented_client.py  models.py  ratelimit.py  specs.py  timeouts.py  tool_execution_ids.py
kolega_code/loop/: __init__.py  guard.py  schemas.py  state.py  tools.py
kolega_code/mcp/: __init__.py  config.py  oauth.py  service.py  state.py  tools.py  transport.py
kolega_code/memory/: __init__.py  identity.py  manager.py  manifest.py  markdown.py  models.py  protocol.py  registry.py
kolega_code/models/: __init__.py  sandbox_terminal_state.py
kolega_code/sandbox/: __init__.py  async_filesystem.py  base.py  browser.py  event_loop.py  filesystem.py  local.py  serializer.py  terminal.py  utils.py
kolega_code/security/: __init__.py  secrets.py
kolega_code/services/: base.py  browser.py  file_system.py  snapshots.py  terminal.py  terminal_buffer.py  workspace_scan.py
kolega_code/tools/: __init__.py  core.py  definitions.py  registry.py
kolega_code/utils/: __init__.py  images.py
scripts/: bench_hotpaths.py  bench_web_fetch.py  check-dev-hooks.sh  install-kolega-code  install-kolega-code.sh  setup-dev.sh  sync_bundled_skills.py  verify_bundled_skill_artifacts.py
tests/: conftest.py  test_agent_config_serialization.py  test_mcp_permissions.py  test_mcp_transport.py
tests/agent/: compaction_helpers.py  conftest.py  test_agent_tools_inventory.py  test_base_agent.py  test_base_agent_anthropic_history_validation.py  test_base_agent_compaction.py  test_base_agent_effective_history.py  test_base_agent_history_serialization.py  test_base_agent_prompt_context.py  test_base_agent_queued_injection.py  test_base_agent_role_overrides.py  test_base_agent_runtime.py  test_base_agent_tool_call_repair.py  test_base_agent_tool_call_repair_integration.py  test_base_agent_tool_execution.py  test_coder_attachments.py  test_coder_prompt_extensions.py  test_commands.py  test_compaction_integration.py  test_compaction_persistence.py  test_compaction_tui_events.py  test_compress_command.py  test_compression.py  test_conversation_compaction.py  test_custom_agents.py  test_duplicate_tool_results.py  test_edit_protocol_tools.py  test_empty_message_handling.py  test_event_emitter.py  test_general_agent.py  test_gigacode_gating.py  test_goal.py  test_goal_evaluate.py  test_history_adapter_thinking.py  test_history_image_blocks.py  test_hooks_integration.py  test_image_compat.py  test_model_routing.py  test_parallel_tool_calls.py  test_permissions.py  (+14 more)
tests/auth/: test_chatgpt_oauth.py  test_tokens.py
tests/benchmarks/: test_edit_benchmark_browser.py  test_edit_benchmark_corpus.py  test_edit_benchmark_protocols.py  test_edit_benchmark_providers.py  test_edit_benchmark_recipes.py  test_edit_benchmark_report.py  test_edit_benchmark_runner.py  test_edit_benchmark_scoring.py  test_edit_benchmark_workspace.py  test_live_edit_benchmark_providers.py
tests/cli/: _app_test_utils.py  test_app.py  test_app_agent_wiring.py  test_app_bootstrap_settings.py  test_app_changes_inspector.py  test_app_compaction_restore.py  (+67 more)
(+447 files in other folders)
