[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kolega-code"
version = "0.1.0"
description = "Local-first AI coding agent for the terminal"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Kolega Team"}
]
keywords = ["ai", "agent", "cli", "coding-agent", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic>=0.18.1",
    "beautifulsoup4>=4.12.0",
    "browser-use==0.1.40",
    "google-genai>=1.9.0",
    "jinja2>=3.1.6",
    "langfuse==3.14.5",
    "nest-asyncio>=1.6.0",
    "openai>=1.68.0",
    "pathspec>=0.11.2",
    "playwright>=1.40.0",
    "psutil>=7.0.0",
    "pydantic>=2.4.2",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "tenacity>=8.2.0",
    "textual>=8.2.5",
    "tiktoken>=0.9.0",
    "trafilatura>=1.6.3",
]

[project.urls]
Homepage = "https://kolega-ai.github.io/kolega-code/"
Documentation = "https://kolega-ai.github.io/kolega-code/"
Repository = "https://github.com/kolega-ai/kolega-code"
Issues = "https://github.com/kolega-ai/kolega-code/issues"

[project.optional-dependencies]
cli = []
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.26.0",
    "ruff>=0.0.290",
]

[project.scripts]
kolega-code = "kolega_code.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["kolega_code"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv]
prerelease = "allow"
exclude-newer = "1 week"
