[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kolega-code"
version = "0.12.0"
description = "Multi-agent coding in the terminal"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.11"
authors = [
    {name = "Kolega Team"}
]
keywords = ["ai", "agent", "cli", "coding-agent", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "anthropic==0.101.0",
    "beautifulsoup4==4.14.3",
    "ddgs==9.14.4",
    "firecrawl-py==4.28.2",
    "google-genai==2.0.1",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "langfuse==3.14.5",
    "lxml-html-clean==0.4.4",
    "nest-asyncio==1.6.0",
    "openai==1.109.1",
    "packaging==25.0",
    "pathspec==1.1.1",
    "pillow==12.2.0",
    "playwright==1.59.0",
    "psutil==7.2.2",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
    "pyyaml==6.0.3",
    "tavily-python==0.7.26",
    "tenacity==9.1.4",
    "textual==8.2.5",
    "tiktoken==0.12.0",
    "trafilatura==2.0.0",
]

[project.urls]
Homepage = "https://kolega-ai.github.io/kolega-code/"
Documentation = "https://kolega-ai.github.io/kolega-code/"
Repository = "https://github.com/kolega-ai/kolega-code"
Issues = "https://github.com/kolega-ai/kolega-code/issues"
Changelog = "https://github.com/kolega-ai/kolega-code/blob/main/CHANGELOG.md"
Contributing = "https://github.com/kolega-ai/kolega-code/blob/main/CONTRIBUTING.md"
Releases = "https://github.com/kolega-ai/kolega-code/releases"
Security = "https://github.com/kolega-ai/kolega-code/security/policy"

[project.optional-dependencies]
cli = []
dev = [
    "genbadge[coverage]==1.1.3",
    "pre-commit==4.6.0",
    "pytest==9.0.3",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "ruff==0.15.12",
    "twine==6.2.0",
]

[project.scripts]
kolega-code = "kolega_code.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["kolega_code"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running tests",
    "e2e: marks tests as end-to-end tests",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.uv]
prerelease = "allow"
exclude-newer = "1 week"
